tests/snapshots/integration__bind_env__bind_env_arg_choice_err.snap
---
source: tests/bind_env.rs
expression: "format! (r#\"\n# OUTPUT\n{output}\n\n# BUILD_OUTPUT\n{build_output}\n\"#)"
---

# OUTPUT
error: invalid value `v1` for environment variable `BIND_ENVS_VAL` that bound to `[VAL]`
  [possible values: x, y, z]


# BUILD_OUTPUT
error: invalid value `v1` for environment variable `BIND_ENVS_VAL` that bound to `[VAL]`
  [possible values: x, y, z]
