tests/snapshots/integration__bind_env__bind_env_cmd_three_required_args.snap
---
source: tests/bind_env.rs
expression: "format! (r#\"\n# OUTPUT\n{output}\n\n# BUILD_OUTPUT\n{build_output}\n\"#)"
---

# OUTPUT
argc__args=([0]="bind-envs" [1]="cmd_three_required_args")
argc__fn=cmd_three_required_args
argc__positionals=([0]="v1" [1]="v2" [2]="v3")
argc_val1=v1
argc_val2=v2
argc_val3=v3
cmd_three_required_args v1 v2 v3


# BUILD_OUTPUT
argc__args=([0]="prog" [1]="cmd_three_required_args")
argc__fn=cmd_three_required_args
argc__positionals=([0]="v1" [1]="v2" [2]="v3")
argc_val1=v1
argc_val2=v2
argc_val3=v3
cmd_three_required_args v1 v2 v3
