tests/snapshots/integration__bind_env__bind_env_cmd_three_required_args_err.snap
---
source: tests/bind_env.rs
expression: "format! (r#\"\n# OUTPUT\n{output}\n\n# BUILD_OUTPUT\n{build_output}\n\"#)"
---

# OUTPUT
error: the following required arguments were not provided:
  <VAL3>


# BUILD_OUTPUT
error: the required arguments `<VAL3>` were not provided
