tests/snapshots/integration__bind_env__bind_env_flags.snap
---
source: tests/bind_env.rs
expression: "format! (r#\"\n# OUTPUT\n{output}\n\n# BUILD_OUTPUT\n{build_output}\n\"#)"
---

# OUTPUT
argc__args=([0]="bind-envs" [1]="flags")
argc__fn=flags
argc__positionals=()
argc_fa1=1
argc_fa3=1
argc_fc=1
argc_fd=1
flags


# BUILD_OUTPUT
argc__args=([0]="prog" [1]="flags")
argc__fn=flags
argc__positionals=()
argc_fa1=1
argc_fa3=1
argc_fc=1
argc_fd=1
flags
