tests/snapshots/integration__bind_env__bind_env_flags_bool_err.snap
---
source: tests/bind_env.rs
expression: "format! (r#\"\n# OUTPUT\n{output}\n\n# BUILD_OUTPUT\n{build_output}\n\"#)"
---

# OUTPUT
error: environment variable `BIND_ENVS_FA1` has invalid value for param '--fa1'


# BUILD_OUTPUT
error: environment variable 'BIND_ENVS_FA1' has invalid value for param '--fa1'
