tests/snapshots/integration__bind_env__bind_env_flags_help.snap
---
source: tests/bind_env.rs
expression: "format! (r#\"\n# OUTPUT\n{output}\n\n# BUILD_OUTPUT\n{build_output}\n\"#)"
---

# OUTPUT
How to bind env to param

USAGE: bind-envs flags [OPTIONS]

OPTIONS:
      --fa1    [env: BIND_ENVS_FA1]
      --fa2    [env: BIND_ENVS_FA2]
      --fa3    [env: FA]
      --fc...  [env: BIND_ENVS_FC]
      --fd     [env: BIND_ENVS_FD]
  -h, --help



# BUILD_OUTPUT
How to bind env to param

USAGE: bind-envs flags [OPTIONS]

OPTIONS:
      --fa1    [env: BIND_ENVS_FA1]
      --fa2    [env: BIND_ENVS_FA2]
      --fa3    [env: FA]
      --fc...  [env: BIND_ENVS_FC]
      --fd     [env: BIND_ENVS_FD]
  -h, --help
